app/globals.css
@import "tailwindcss";

:root {
  --dark: #111111;
  --dark-alternate: #1b1918;
  --primary: #ff5f3f;
  --primary-light: #f4ebeb;
}

@theme inline {
  --color-dark: var(--dark);
  --color-dark-alternate: var(--dark-alternate);
  --color-primary: var(--primary);
  --color-primary-light: var(--primary-light);
  --font-poppins: var(--font-poppins);
}

html {
  overflow-x: hidden;
}

* {
  @apply font-poppins;
}

